syntax = "proto3";

package auth;

option go_package = ".;authproto";

import "google/protobuf/timestamp.proto";

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message RegisterRequest {
    string username = 1;

    string password = 2;

    string email = 3;
}

message RegisterResponse {
    string message = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    bool authorized = 1;
    User user = 2;
}

message GetUserRequest {
    string id = 1;
}

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc GetUser(GetUserRequest) returns (User) {}
}
